zokrates_cli/examples/compile_errors/assembly/unallowed_type_in_constrained_assignment.zok
def main() {
    field[2] mut a = [0; 2];
    asm {
        a <== [1, 2];
    }
}